fixing book link contrast

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,7 @@ svg {
     width: 1em;
 }
 
+
 /**media queries h3 up to 1024px width**/
 @media only screen and (max-width: 1024px) {
 h3 {
@@ -175,6 +176,11 @@ a:hover {
 }
 }
 
+/**book link**/
+.book_link{
+color: #B34700;
+}
+
 /**Link to id's on pictures**/
 .linktopic {
     text-decoration: none;
@@ -182,7 +188,7 @@ a:hover {
 
 /**link to my github in built by**/
 .credits{
-    color:#999;
+    color: #A3A3A3;
     text-decoration: none;
 }
 
